src-tauri/cargo_out.txt
    Checking my-launcher v0.1.0 (X:\Product\Hue\my-launcher\src-tauri)
error[E0107]: method takes 0 generic arguments but 1 generic argument was supplied
    --> src\lib.rs:23:57
     |
  23 | ...                   if let Ok(pos) = window.cursor_position::<tauri::PhysicalPosition<f64>>() {
     |                                               ^^^^^^^^^^^^^^^-------------------------------- help: remove the unnecessary generics
     |                                               |
     |                                               expected 0 generic arguments
     |
note: method defined here, with 0 generic parameters
    --> C:\Users\takum\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.10.2\src\webview\webview_window.rs:1829:10
     |
1829 |   pub fn cursor_position(&self) -> crate::Result<PhysicalPosition<f64>> {
     |          ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src\lib.rs:28:91
    |
 28 | ...                   let _ = window.set_position(tauri::Position::Physical(new_pos));
    |                                                   ------------------------- ^^^^^^^ expected `PhysicalPosition<i32>`, found `PhysicalPosition<f64>`
    |                                                   |
    |                                                   arguments to this enum variant are incorrect
    |
    = note: expected struct `PhysicalPosition<i32>`
               found struct `PhysicalPosition<f64>`
note: tuple variant defined here
   --> C:\Users\takum\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\dpi-0.1.2\src\lib.rs:745:5
    |
745 |     Physical(PhysicalPosition<i32>),
    |     ^^^^^^^^

Some errors have detailed explanations: E0107, E0308.
For more information about an error, try `rustc --explain E0107`.
error: could not compile `my-launcher` (lib) due to 2 previous errors
